--- a/index1.html
+++ b/index1.html
@@ -13,7 +13,7 @@
             <h5 id="h5">Home</h5>
             <ul >
                 <li>
-                    <a href="index.html">CV</a>
+                    <a href="index_cv.html">CV</a>
                 </li>
                 <li>
                     <a href="Beranda.html">Profile</a>
