Update and rename index.html to index_cv.html

--- a/index_cv.html
+++ b/index_cv.html
@@ -18,7 +18,7 @@
                     <a href="index2.html">Home</a>
                 </li>
                 <li>
-                    <a href="Beranda.html">Profile</a>
+                    <a href="index_home.html">Profile</a>
                 </li>
             </ul>
         </header>
