--- a/index_beranda.html
+++ b/index_beranda.html
@@ -13,10 +13,10 @@
             <h5 id="h5">Profile</h5>
             <ul >
                 <li>
-                    <a href="index.html">CV</a>
+                    <a href="index_cv.html">CV</a>
                 </li>
                 <li>
-                    <a href="index2.html">Home</a>
+                    <a href="index.html">Home</a>
                 </li>
             </ul>
         </header>
