--- a/index_cv.html
+++ b/index_cv.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="styles.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-    <title>Dhani Kusuma Prasetyo</title>
+    <title>Cv|Dhani</title>
     <link rel="stylesheet" href="styles.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
@@ -15,10 +15,10 @@
             <h5 id="h5">Cv</h5>
             <ul >
                 <li>
-                    <a href="index2.html">Home</a>
+                    <a href="index_beranda.html">Home</a>
                 </li>
                 <li>
-                    <a href="index_home.html">Profile</a>
+                    <a href="index_profile.html">Profile</a>
                 </li>
             </ul>
         </header>
