--- a/index_cv.html
+++ b/index_cv.html
@@ -15,7 +15,7 @@
             <h5 id="h5">Cv</h5>
             <ul >
                 <li>
-                    <a href="index_profile.html">Profile</a>
+                    <a href="index_propile.html">Profile</a>
                 </li>
                 <li>
                     <a href="index.html">Home</a>
