--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                     <a href="index_cv.html">CV</a>
                 </li>
                 <li>
-                    <a href="index_profile.html">Profile</a>
+                    <a href="index_propile.html">Profile</a>
                 </li>
             </ul>
         </header>
